crates/loxide_interpreter/snapshots/interpreter/snapshots-outputs/loxide_interpreter__eval__tests__block_stmt.snap
---
source: crates/loxide_interpreter/src/eval.rs
expression: footprints!()
---
[
    Ok(
        String(
            "inner a",
        ),
    ),
    Ok(
        String(
            "outer b",
        ),
    ),
    Ok(
        String(
            "global c",
        ),
    ),
    Ok(
        String(
            "outer a",
        ),
    ),
    Ok(
        String(
            "outer b",
        ),
    ),
    Ok(
        String(
            "global c",
        ),
    ),
    Ok(
        String(
            "global a",
        ),
    ),
    Ok(
        String(
            "global b",
        ),
    ),
    Ok(
        String(
            "global c",
        ),
    ),
]
