crates/loxide_interpreter/snapshots/interpreter/snapshots-outputs/loxide_interpreter__eval__tests__if_stmt.snap
---
source: crates/loxide_interpreter/src/eval.rs
expression: footprints!()
---
[
    Ok(
        String(
            "baz",
        ),
    ),
    Err(
        UndefinedVariable(
            "b",
        ),
    ),
]
