crates/loxide_interpreter/snapshots/interpreter/snapshots-outputs/loxide_interpreter__eval__tests__invalid_unary.snap
---
source: crates/loxide_interpreter/src/eval.rs
expression: results
---
[
    [
        Err(
            InvalidUnaryOperand(
                "number",
            ),
        ),
    ],
    [
        Err(
            InvalidUnaryOperand(
                "boolean",
            ),
        ),
    ],
]
