crates/loxide_interpreter/snapshots/interpreter/snapshots-outputs/loxide_interpreter__eval__tests__literal.snap
---
source: crates/loxide_interpreter/src/eval.rs
expression: results
---
[
    Ok(
        Number(
            123.0,
        ),
    ),
    Ok(
        String(
            "abc",
        ),
    ),
    Ok(
        Boolean(
            true,
        ),
    ),
    Ok(
        Boolean(
            false,
        ),
    ),
    Ok(
        Nil,
    ),
]
