crates/loxide_interpreter/snapshots/interpreter/snapshots-outputs/loxide_interpreter__eval__tests__valid_binary.snap
---
source: crates/loxide_interpreter/src/eval.rs
expression: results
---
[
    Ok(
        Boolean(
            true,
        ),
    ),
    Ok(
        Boolean(
            true,
        ),
    ),
    Ok(
        Boolean(
            true,
        ),
    ),
    Ok(
        Boolean(
            true,
        ),
    ),
    Ok(
        Number(
            1.0,
        ),
    ),
    Ok(
        Number(
            1.0,
        ),
    ),
    Ok(
        Number(
            2.0,
        ),
    ),
    Ok(
        Number(
            0.0,
        ),
    ),
]
