crates/loxide_interpreter/snapshots/interpreter/snapshots-outputs/loxide_interpreter__eval__tests__variable.snap
---
source: crates/loxide_interpreter/src/eval.rs
expression: results
---
[
    Ok(
        Void,
    ),
    Ok(
        Number(
            1.0,
        ),
    ),
    Ok(
        Void,
    ),
    Ok(
        Nil,
    ),
    Ok(
        Number(
            1.0,
        ),
    ),
]
