crates/loxide_interpreter/snapshots/interpreter/snapshots-outputs/loxide_interpreter__eval__tests__while_stmt.snap
---
source: crates/loxide_interpreter/src/eval.rs
expression: footprints!()
---
[
    Ok(
        Number(
            3.0,
        ),
    ),
    Ok(
        Number(
            2.0,
        ),
    ),
    Ok(
        Number(
            1.0,
        ),
    ),
    Err(
        UndefinedVariable(
            "b",
        ),
    ),
]
